[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/HeartBeatController.gd" type="Script" id=1]
[ext_resource path="res://Audio/heartbeat.wav" type="AudioStream" id=2]

[node name="HeartBeatController" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="HeartBeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.097

[node name="FastTimer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FastTimer" to="." method="_on_FastTimer_timeout"]
